# CPP-Trading-Matching-Engine

./: CMakeLists.txt  README.md  main.cpp
bench/: Performance.cpp
data/: input.csv  output.csv
include/: CsvParser.h  CsvWriter.h  Logger.h  MatchResult.h  MatchingEngine.h  Order.h  OrderBook.h
src/: CsvParser.cpp  CsvWriter.cpp  Logger.cpp  MatchingEngine.cpp  Order.cpp  OrderBook.cpp
tests/data/: input_all_errors.csv  input_bad_action.csv  input_bad_side.csv  input_bad_type.csv  input_few_columns.csv  input_invalid.csv  input_only_header.csv  input_two_valid.csv
tests/unit/: test_CsvParser.cpp  test_CsvWriter.cpp  test_MatchingEngine.cpp  test_OrderBook.cpp  test_Performance.cpp
